# apk-parser

./: Cargo.toml  README.md  Rocket.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: main.rs
src/app/: android_xml.rs  apk_info.rs  manifest_parser.rs  mod.rs
wasm/: apk_parser_wasm.d.ts  apk_parser_wasm.js  apk_parser_wasm_bg.wasm  apk_parser_wasm_bg.wasm.d.ts  package.json
