[package]
name = "apk-parser"
authors = ["GrayMind75 <me@benyaamin.com>"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
zip = "0.6.2"
axmldecoder = "0.4.0"
xml-rs = "0.8"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
